src/_includes/components/announcement.css
.announcement {
	width: 100%;
	background-color: rgb(24, 49, 83);
	color: #fff;
	padding: 0.25em 1em;
	line-height: 1;
	gap: .5em;
}
@media (min-width: 48em) {
	/* 768px */
	.announcement {
		font-size: 1em;
		font-size: clamp(1em, 2vw, 1.25em);
	}
}
.announcement,
.announcement-btn {
	--btn-bg: #f0f1f3;
	--btn-color: #183153;
	--btn-shadow-color: #0f1f36;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	font-weight: 600;
	text-align: center;
}
.announcement-btn,
.announcement > a,
.announcement > span {
	display: flex;
	align-items: center;
	gap: .5em;
	padding: .5em 2em;
	text-decoration: none;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	border-radius: .5em;
	margin: .25em .25em .5em .25em;
	border: .125rem solid var(--btn-shadow-color);
}
.announcement-btn,
.announcement > a,
.announcement > a:visited,
.announcement > a:any-link {
	background-color: var(--btn-bg);
	color: var(--btn-color);
	box-shadow: 0 .375rem 0 var(--btn-shadow-color);
}
@media (max-width: 31.1875em) { /* 499px */
	.announcement > a > span > b {
		display: none;
	}
}
.announcement-btn:hover,
.announcement a:hover {
	text-decoration: underline;
}
.announcement a:after {
	display: none;
}
.announcement-btn {
	line-height: 1.6;
	margin-block: 2em;
}

.elv-header-default .announcement {
	--btn-bg: #f0f1f3;
	--btn-color: #333;
	--btn-shadow-color: #666;
	background-color: #222;
}

